--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 .gradle
-/build/
+build
 !gradle/wrapper/gradle-wrapper.jar
 
 ### IntelliJ IDEA ###
 .idea
-*.iws
 *.iml
-*.ipr
 /out/
+docker/artifact/
