Add fix for dependencies checker

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,8 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: gradle dependencyCheckAnalyze dependencies
+      - run: gradle dependencyCheckAnalyze
+      - run: gradle dependencies
 
       - save_cache:
           paths:
