--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: gradle dependencyCheckAnalyze
+      - run: ./gradlew dependencyCheckAnalyze
       - run: gradle dependencies
 
       - save_cache:
