--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: ./gradlew dependencyCheckAnalyze
-      - run: gradle dependencies
+      - run: ./gradlew dependencyCheckAnalyze dependencies
 
       - save_cache:
           paths:
