--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,6 @@ jobs:
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
       # run tests!
-      - run: gradle test
-      - run: gradle jacocoTestReport
+      - run: ./gradlew test
+      - run: ./gradlew jacocoTestReport
       - run: curl -s https://codecov.io/bash | bash
