--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: ./gradlew dependencyCheckAnalyze dependencies
+      - run: gradle dependencies
 
       - save_cache:
           paths:
@@ -39,6 +39,6 @@ jobs:
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
       # run tests!
-      - run: ./gradlew test
-      - run: ./gradlew jacocoTestReport
+      - run: gradle test
+      - run: gradle jacocoTestReport
       - run: curl -s https://codecov.io/bash | bash
