--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,4 +41,5 @@ jobs:
       # run tests!
       - run: gradle test
       - run: gradle dependencyCheckAnalyze
+      - run: gradle --version
       - run: curl -s https://codecov.io/bash | bash
