--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.redis.port=6379
 spring.redis.password=password
 spring.redis.host=localhost
+
+logging.level.org.springframework.web: INFO
+logging.file=/var/log/linkshare.log
