--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 spring.redis.port=6379
 spring.redis.password=password
-spring.redis.host=${REDIS_HOST}
+spring.redis.host=localhost
 
 logging.level.org.springframework.web: INFO
 logging.file=/var/log/linkshare.log
