--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,9 +1,11 @@
 version: '3'
 
 services:
-  LinkShare:
+  linkshare:
     container_name: LinkShare
-    image: linkshare:1.0
+    build:
+      dockerfile: docker/
+      context: ../
     ports:
       - 8080:8080
     environment:
@@ -11,15 +13,13 @@ services:
     depends_on:
       - redis
     networks:
-      - esnet
+      - appnet
 
   redis:
     container_name: LSRedis
     image: redis:latest
-    ports:
-      - 6379:6379
     networks:
-      - esnet
+      - appnet
 
 networks:
-  esnet:
+  appnet:
