--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   linkshare:
     container_name: LinkShare
     build:
-      dockerfile: docker/
+      dockerfile: docker/Dockerfile
       context: ../
     ports:
       - 8080:8080
