[LS-012] Setup for kibana and elastic search (#14)

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,16 +1,25 @@
 version: '3'
 
 services:
-  LinkShare:
+  linkshare:
     container_name: LinkShare
-    image: linkshare:1.0
+    build:
+      dockerfile: docker/Dockerfile
+      context: ../
     ports:
       - 8080:8080
+    environment:
+      - REDIS_HOST=redis
     depends_on:
       - redis
+    networks:
+      - appnet
 
   redis:
     container_name: LSRedis
     image: redis:latest
-    ports:
-      - 6379:6379
+    networks:
+      - appnet
+
+networks:
+  appnet:
